[gd_scene load_steps=27 format=2]

[ext_resource path="res://Skins/TestSkin/osu!_rwxudnxmU5.png" type="Texture" id=1]
[ext_resource path="res://Skins/TestSkin/taiko-bar-right.png" type="Texture" id=2]
[ext_resource path="res://Skins/TestSkin/taiko-bar-left.png" type="Texture" id=3]
[ext_resource path="res://Skins/TestSkin/taiko-drum-outer.png" type="Texture" id=4]
[ext_resource path="res://Skins/TestSkin/taiko-drum-inner.png" type="Texture" id=5]
[ext_resource path="res://Scripts/DrumInteraction.gd" type="Script" id=6]
[ext_resource path="res://Skins/TestSkin/taiko-drum-hitclap.wav" type="AudioStream" id=7]
[ext_resource path="res://Skins/TestSkin/taiko-drum-hitnormal.wav" type="AudioStream" id=8]
[ext_resource path="res://Fonts/NotoSansJP-Bold.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Skins/TestSkin/taikobigcircle.png" type="Texture" id=10]
[ext_resource path="res://Scripts/SettingsPanel.gd" type="Script" id=11]
[ext_resource path="res://Skins/TestSkin/approachcircle.png" type="Texture" id=12]
[ext_resource path="res://Scripts/ChartLoader.gd" type="Script" id=13]
[ext_resource path="res://Skins/TestSkin/taiko-hit300.png" type="Texture" id=14]
[ext_resource path="res://Scripts/HitManager.gd" type="Script" id=15]
[ext_resource path="res://Scripts/temploadchart.gd" type="Script" id=16]
[ext_resource path="res://Scripts/KeybindChanger.gd" type="Script" id=17]
[ext_resource path="res://Skins/TestSkin/taiko-hit100.png" type="Texture" id=18]
[ext_resource path="res://Skins/TestSkin/taiko-hit0.png" type="Texture" id=19]
[ext_resource path="res://Skins/TestSkin/taiko-drum-hitwhistle.wav" type="AudioStream" id=20]
[ext_resource path="res://Skins/TestSkin/taiko-drum-hitfinish.wav" type="AudioStream" id=21]
[ext_resource path="res://Scripts/ResolutionChanger.gd" type="Script" id=22]
[ext_resource path="res://Scripts/OffsetThingy.gd" type="Script" id=23]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 41
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 9 )

[node name="Gameplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_vertical_guides_": [ -119.0 ]
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.215686, 0.215686, 0.215686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7

[node name="ref" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.176471 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="BarRight" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -130.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 170 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="HitPointOffset" type="Control" parent="BarRight"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 191.25
margin_top = -10.0
margin_right = 191.25
margin_bottom = -10.0

[node name="HitPoint" type="TextureRect" parent="BarRight/HitPointOffset"]
self_modulate = Color( 1, 1, 1, 0.435294 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 65.0
margin_bottom = 65.0001
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64.5, 64.5 )
texture = ExtResource( 10 )
expand = true

[node name="Rim" type="TextureRect" parent="BarRight/HitPointOffset/HitPoint"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 64.5, 64.5 )
texture = ExtResource( 12 )
expand = true

[node name="ObjectContainers" type="Control" parent="BarRight/HitPointOffset"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NoteContainer" type="Control" parent="BarRight/HitPointOffset/ObjectContainers"]
margin_right = 40.0
margin_bottom = 40.0

[node name="EtcContainer" type="Control" parent="BarRight/HitPointOffset/ObjectContainers"]
modulate = Color( 1, 1, 1, 0.380392 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Judgements" type="Control" parent="BarRight/HitPointOffset"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.75
margin_top = 26.35
margin_right = 25.75
margin_bottom = 26.35

[node name="JudgeAccurate" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 14 )
stretch_mode = 4

[node name="JudgeInaccurate" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 18 )
stretch_mode = 4

[node name="JudgeMiss" type="TextureRect" parent="BarRight/HitPointOffset/Judgements"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 19 )
stretch_mode = 4

[node name="BarLeft" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -125.0
margin_right = 130.0
margin_bottom = 19.9999
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true

[node name="DrumVisual" type="Control" parent="BarLeft"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftDon" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_right = 65.0
texture = ExtResource( 5 )
expand = true

[node name="RightDon" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -72.5
margin_bottom = 72.5
texture = ExtResource( 5 )
expand = true
flip_h = true

[node name="LeftKat" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
margin_right = 65.0
texture = ExtResource( 4 )
expand = true
flip_h = true

[node name="RightKat" type="TextureRect" parent="BarLeft/DrumVisual"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -72.5
margin_bottom = 72.5
texture = ExtResource( 4 )
expand = true

[node name="Combo" type="Label" parent="BarLeft/DrumVisual"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -33.0
margin_right = 13.5
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -246.0
margin_right = -6.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "0000000000"
align = 2

[node name="Accuracy" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -115.0
margin_top = 44.0
margin_right = -30.0
margin_bottom = 104.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0.00"
align = 2

[node name="AccPercent" type="Label" parent="UI/Accuracy"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 56.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "%"
align = 2
valign = 2

[node name="debug" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="debugtext" type="Label" parent="debug"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -115.0
margin_right = 149.0
margin_bottom = -50.0
grow_vertical = 0
text = "Welcome to TaiClone!"
valign = 2

[node name="fpstext" type="Label" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.0
margin_top = -38.0
margin_right = -103.0
margin_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS: XXX"
align = 2
valign = 2

[node name="temploadchart" type="HBoxContainer" parent="debug"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -46.0
margin_right = 642.0
margin_bottom = -8.0
script = ExtResource( 16 )

[node name="LineEdit" type="LineEdit" parent="debug/temploadchart"]
margin_right = 242.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Chart Location"

[node name="LoadButton" type="Button" parent="debug/temploadchart"]
margin_left = 246.0
margin_right = 288.0
margin_bottom = 38.0
text = "Load"

[node name="PlayButton" type="Button" parent="debug/temploadchart"]
margin_left = 292.0
margin_right = 330.0
margin_bottom = 38.0
text = "Play"

[node name="AutoToggle" type="CheckBox" parent="debug/temploadchart"]
margin_left = 334.0
margin_right = 392.0
margin_bottom = 38.0
text = "Auto"

[node name="MuteMToggle" type="CheckBox" parent="debug/temploadchart"]
margin_left = 396.0
margin_right = 499.0
margin_bottom = 38.0
text = "Mute Music"

[node name="MuteHToggle" type="CheckBox" parent="debug/temploadchart"]
margin_left = 503.0
margin_right = 633.0
margin_bottom = 38.0
text = "Mute Hitsounds"

[node name="RateInput" type="LineEdit" parent="debug/temploadchart"]
visible = false
margin_left = 425.0
margin_right = 632.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Target Rate (dont work yet)"

[node name="RateButton" type="Button" parent="debug/temploadchart"]
visible = false
margin_left = 542.0
margin_right = 632.0
margin_bottom = 38.0
text = "Change Rate"

[node name="SettingsButton" type="Button" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -38.0
text = "Settings"

[node name="VersionText" type="Label" parent="debug"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -253.0
margin_top = -21.0
margin_right = -101.0
margin_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
text = "version"
align = 2

[node name="SettingsPanel" type="Panel" parent="debug"]
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -321.0
margin_top = -266.0
margin_right = -13.0
margin_bottom = -52.0
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 11 )

[node name="Panel" type="HBoxContainer" parent="debug/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -55.0
margin_right = 50.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveButton" type="Button" parent="debug/SettingsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -26.0
margin_right = 24.0
margin_bottom = -6.0
text = "Save"

[node name="GridContainer" type="GridContainer" parent="debug/SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Keybinds" type="VBoxContainer" parent="debug/SettingsPanel/GridContainer"]
margin_left = 26.0
margin_top = 29.0
margin_right = 126.0
margin_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 17 )

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Keybinds"]
margin_right = 100.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Keybinds"
align = 1
valign = 1

[node name="LeftKat" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Keybinds"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Keybinds/LeftKat"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 17.0
text = "Left Kat"
align = 1
valign = 1

[node name="Button" type="Button" parent="debug/SettingsPanel/GridContainer/Keybinds/LeftKat"]
margin_left = 52.0
margin_right = 86.0
margin_bottom = 20.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "KEY"

[node name="LeftDon" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Keybinds"]
margin_top = 42.0
margin_right = 100.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Keybinds/LeftDon"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 17.0
text = "Left Don"
align = 1
valign = 1

[node name="Button" type="Button" parent="debug/SettingsPanel/GridContainer/Keybinds/LeftDon"]
margin_left = 58.0
margin_right = 92.0
margin_bottom = 20.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "KEY"

[node name="RightDon" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Keybinds"]
margin_top = 66.0
margin_right = 100.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Keybinds/RightDon"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
text = "Right Don"
align = 1
valign = 1

[node name="Button" type="Button" parent="debug/SettingsPanel/GridContainer/Keybinds/RightDon"]
margin_left = 66.0
margin_right = 100.0
margin_bottom = 20.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "KEY"

[node name="RightKat" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Keybinds"]
margin_top = 90.0
margin_right = 100.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Keybinds/RightKat"]
margin_top = 3.0
margin_right = 56.0
margin_bottom = 17.0
text = "Right Kat"
align = 1
valign = 1

[node name="Button" type="Button" parent="debug/SettingsPanel/GridContainer/Keybinds/RightKat"]
margin_left = 60.0
margin_right = 94.0
margin_bottom = 20.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "KEY"

[node name="Resolution" type="VBoxContainer" parent="debug/SettingsPanel/GridContainer"]
margin_left = 185.0
margin_top = 51.0
margin_right = 279.0
margin_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 22 )

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Resolution"]
margin_right = 94.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Resolution"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="debug/SettingsPanel/GridContainer/Resolution"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 38.0

[node name="Fullscreen" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Resolution"]
margin_top = 42.0
margin_right = 94.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Resolution/Fullscreen"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Fullscreen"

[node name="Toggle" type="CheckBox" parent="debug/SettingsPanel/GridContainer/Resolution/Fullscreen"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0

[node name="Audio" type="VBoxContainer" parent="debug/SettingsPanel/GridContainer"]
margin_left = 25.0
margin_top = 172.0
margin_right = 126.0
margin_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Audio"]
margin_right = 101.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Audio"
align = 1
valign = 1

[node name="Offset" type="HBoxContainer" parent="debug/SettingsPanel/GridContainer/Audio"]
margin_top = 18.0
margin_right = 101.0
margin_bottom = 42.0
script = ExtResource( 23 )

[node name="Label" type="Label" parent="debug/SettingsPanel/GridContainer/Audio/Offset"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Offset"

[node name="LineEdit" type="LineEdit" parent="debug/SettingsPanel/GridContainer/Audio/Offset"]
margin_left = 43.0
margin_right = 101.0
margin_bottom = 24.0
placeholder_text = "0"

[node name="DrumInteraction" type="Node" parent="."]
script = ExtResource( 6 )

[node name="LeftDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 8 )

[node name="LeftKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 7 )

[node name="RightDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 8 )

[node name="RightKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 7 )

[node name="DrumAnimationTween" type="Tween" parent="DrumInteraction"]

[node name="FinisherDonAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 21 )

[node name="FinisherKatAudio" type="AudioStreamPlayer" parent="DrumInteraction"]
stream = ExtResource( 20 )

[node name="HitManager" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="ChartLoader" type="Node" parent="."]
script = ExtResource( 13 )
baseSVMultiplier = 3.0

[node name="StartTimer" type="Timer" parent="ChartLoader"]
one_shot = true
